--- a/.eslintrc.yml
+++ b/.eslintrc.yml
@@ -2,8 +2,9 @@ env:
   browser: true
   es2021: true
 extends:
-  - plugin:react/recommended
   - airbnb
+  - plugin:react/recommended
+  - plugin:react-hooks/recommended
 parser: '@typescript-eslint/parser'
 parserOptions:
   ecmaFeatures:
@@ -17,12 +18,20 @@ rules:
   arrow-parens:
   - warn
   - as-needed
+  consistent-return:
+  - off
   import/extensions: off
   import/no-unresolved: off
   linebreak-style: 
   - warn
   - windows
   no-multiple-empty-lines:
+  - warn
+  no-param-reassign:
+  - warn
+  no-plusplus:
+  - off
+  no-shadow:
   - warn
   no-undef:
   - warn
@@ -39,3 +48,5 @@ rules:
     - '.tsx'
   react/jsx-props-no-spreading:
   - warn
+  react/require-default-props:
+  - off
