--- a/package.json
+++ b/package.json
@@ -9,11 +9,14 @@
   "dependencies": {
     "@googlemaps/js-api-loader": "^1.14.2",
     "@googlemaps/react-wrapper": "^1.1.34",
+    "@reduxjs/toolkit": "^1.8.1",
     "@types/google.maps": "^3.48.8",
     "react": "^18.1.0",
-    "react-dom": "^18.1.0"
+    "react-dom": "^18.1.0",
+    "react-redux": "^8.0.1"
   },
   "devDependencies": {
+    "@parcel/transformer-less": "2.5.0",
     "@parcel/transformer-typescript-tsc": "^2.5.0",
     "@types/react": "^18.0.9",
     "@types/react-dom": "^18.0.4",
@@ -24,7 +27,7 @@
     "eslint-plugin-import": "^2.25.3",
     "eslint-plugin-jsx-a11y": "^6.5.1",
     "eslint-plugin-react": "^7.28.0",
-    "eslint-plugin-react-hooks": "^4.3.0",
+    "eslint-plugin-react-hooks": "^4.5.0",
     "parcel": "^2.5.0",
     "typescript": "^4.6.4"
   }
