--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "description": "A web app that shows moving trace on map as video",
   "author": {
     "name": "sym233",
-    "email": "sym_xd@qq.com"
+    "email": "yimiao233@outlook.com"
   },
   "homepage": "https://sym233.github.io/minimap",
   "scripts": {
@@ -23,7 +23,7 @@
     "react-redux": "^8.0.1"
   },
   "devDependencies": {
-    "@parcel/transformer-less": "2.5.0",
+    "@parcel/transformer-less": "^2.8.0",
     "@parcel/transformer-typescript-tsc": "^2.5.0",
     "@types/react": "^18.0.9",
     "@types/react-dom": "^18.0.4",
@@ -35,7 +35,8 @@
     "eslint-plugin-jsx-a11y": "^6.5.1",
     "eslint-plugin-react": "^7.28.0",
     "eslint-plugin-react-hooks": "^4.5.0",
-    "parcel": "^2.5.0",
+    "parcel": "^2.8.0",
+    "process": "^0.11.10",
     "typescript": "^4.6.4"
   }
 }
