--- a/package.json
+++ b/package.json
@@ -16,11 +16,11 @@
   "dependencies": {
     "@googlemaps/js-api-loader": "^1.14.2",
     "@googlemaps/react-wrapper": "^1.1.34",
-    "@reduxjs/toolkit": "^1.8.1",
     "@types/google.maps": "^3.48.8",
+    "mobx": "^6.7.0",
+    "mobx-react-lite": "^3.4.0",
     "react": "^18.1.0",
-    "react-dom": "^18.1.0",
-    "react-redux": "^8.0.1"
+    "react-dom": "^18.1.0"
   },
   "devDependencies": {
     "@parcel/transformer-less": "^2.8.0",
